Added index.html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<h1>Hello World!</h1>
+<html>
+    <link rel="stylesheet" href="index.css">
+<header>
+    <div class=navbar>
+        <div class=navButton>
+            <a href="index.html">Robert Dams</a>
+        </div>
+        <div class=navButton>
+            <a href="projects.html">Projects</a>
+        </div>
+        <div class=navButton>
+            <a href="workingexperience.html">Working Experience</a>
+        </div>
+        <div class=navButton>
+            <a href="cv.html">Curricilum Vitae</a>
+        </div>
+        <div class=navButton>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+</header>
+<body>
+    <div class="content">
+        <div class="sidebar">
+        </div>
+        <div class="mainbar">
+            <div class="marginDiv">
+            </div>
+            <div class="container">
+                <h1>Welcome</h1>
+                <h2>Welcome to my portfolio website. This website exists to give you a broader overview of my work experience and relevant education. I hope you can find everything here. If not, you can always contact me using the <a href=contact.html>Contact</a> page!</h2>
+            </div>
+            <div class="marginDiv">
+            </div>
+            <div class="container">
+                <h1>Who am I?</h1>
+                <h2>My name is Robert Dams, and I am currently a Software Engineering student at Fontys Hogescholen. I am a curious, communicative and motivated person in the software development field.</h2>
+            </div>
+            <div class="marginDiv">
+            </div>
+            <div class="container">
+                <h1>Programming skills</h1>
+                <h2>As a person I am open-minded and I like to learn. This results in me exploring lots of different aspects of Software Engineering instead of sticking to one subject. My go to programming language currently is C#, however I am also proficient in Java, HTML, CSS, .Net, SQL and a handfull of frameworks. To see a more in depth list of skills I would suggest checking out the <a href=workingexperience.html>Working Experience</a> page</h2>
+            </div>
+            <div class="marginDiv">
+            </div>
+            <div class="container">
+                <h1>Relevant Experience</h1>
+                <h2>Not only am I experienced in development, I also enjoy public speaking and general human interaction. Working in retail sales and computer repairs for a number of years made me customer focused and a great listener. Next to that I also enjoy public speaking. Stuff like presenting new projects or updating the stakeholders of a current project is something that I enjoy doing. This is why in most projects, you will likely see me take on a leadership role.</h2>
+            </div>
+            <div class="marginDiv">
+            </div>
+        </div>
+        <div class="sidebar">
+        </div>
+    </div>
+</body>
+<footer>
+    <div class="footerContent">
+        <p1>Designed and programmed by Robert Dams</p1>
+    </div>
+</footer>
+</html>
