Added loader animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     </div>
 </header>
 <body>
+    <div id="loader-wrapper">
+        <p>Loading... please wait</p>
+        <div id="loader"></div>
+    </div>
     <div class="content">
         <div class="sidebar">
         </div>
