--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         </div>
     </div>
 </header>
-<body>
+<body id="body">
     <div id="loader-wrapper">
         <p>Loading... please wait</p>
         <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
     </div>
     <div class="content">
         <div class="sidebar">
@@ -58,6 +60,9 @@
         <div class="sidebar">
         </div>
     </div>
+
+    <script src="js/main.js"></script>
+    
 </body>
 <footer>
     <div class="footerContent">
