--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <html>
-    <link rel="stylesheet" href="index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+
+    <body>
+        <div class="landingsPage">
+            <div class="landingsPageText">
+                <h1>Hi, I'm Robert Dams.</h1>
+                <h1>I'm a full-stack software engineer.</h1>
+                <button>Check out my work</button>
+            </div>
+        </div>
+    </body>
+    <!-- <link rel="stylesheet" href="css/index.css">
 <header>
     <div class=navbar>
         <div class=navButton>
@@ -68,5 +80,5 @@
     <div class="footerContent">
         <p1>Designed and programmed by Robert Dams</p1>
     </div>
-</footer>
+</footer> -->
 </html>
