--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
+                <li class="nav-item navItem">
                   <a class="nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item navItem">
                   <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item navItem">
                   <a class="nav-link" href="#">Projects</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item navItem">
                   <a class="nav-link" href="#">Contact</a>
                 </li>
               </ul>
