Changes: - Added multicolor text on landingspage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="landingsPage">
             <div class="landingsPageText">
-                <h1>Hi, I'm Robert Dams.</h1>
-                <h1>I'm a full-stack software engineer.</h1>
+                <h1>Hi, I'm <span style="color: rgb(241, 54, 55)">Robert Dams.</span></h1>
+                <h1>I'm a <span style="color: rgb(241, 54, 55)">full-stack software engineer.</span></h1>
                 <button type="button" class="btn btn-default landingsPageButton">Check out my work</button>
             </div>
         </div>
