Changes: - Added the skills page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="landingsPage">
             <div class="landingsPageText">
-                <h1>Hi, I'm <span style="color: rgb(241, 54, 55)">Robert Dams.</span></h1>
-                <h1>I'm a <span style="color: rgb(241, 54, 55)">full-stack software engineer.</span></h1>
+                <h1>Hi, I'm <span style="color: rgb(241, 54, 55)">Robert Dams</span></h1>
+                <h1>I'm a <span style="color: rgb(241, 54, 55)">full-stack software engineer</span></h1>
                 <button type="button" class="btn btn-default landingsPageButton">Check out my work</button>
             </div>
         </div>
@@ -29,6 +29,9 @@
                   <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item navItem">
+                    <a class="nav-link" href="#">Skills</a>
+                  </li>
+                <li class="nav-item navItem">
                   <a class="nav-link" href="#">Projects</a>
                 </li>
                 <li class="nav-item navItem">
@@ -38,7 +41,46 @@
             </div>
           </nav>
         <div class="aboutPage">
-            
+            <h1 style="text-align: center; padding-top: 20px; color: rgb(241, 54, 55);">About</h1>
+            <hr style="width: 30%; height: 5px; background-color:rgb(241, 54, 55); margin-left: 35%;"></hr>  
+        </div>
+        <div class="skillsPage">
+            <h1 style="text-align: center; padding-top: 20px; color: rgb(241, 54, 55);">Skills</h1>
+            <hr style="width: 30%; height: 5px; background-color:rgb(241, 54, 55); margin-left: 35%;"></hr>  
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/568069-200.png" class="img-fluid" alt="picture">
+                        <h2>Software Development</h2>
+                        <p1>Software Development is my bread and butter. I am proficient in both high level programming languages like C# and Java, as well as lower level ones like C++. All code adhers to the latest SOLID principles.</p1>
+                    </div>
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/2963864-200.png" class="img-fluid" alt="picture">
+                        <h2>Development Operations</h2>
+                        <p1>DevOps is second nature to me. I have experience in both Azure and Google Cloud as well as code analysis tools like Jenkins and SonarQube.</p1>
+                    </div>
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/3190682-200.png" class="img-fluid" alt="picture">
+                        <h2>Webdesign</h2>
+                        <p1>A good back-end deserves a beautiful front-end. I have experience in React and Blazor. I also know how to make effective use of Bootstrap in both React and native HTML/CSS.</p1>
+                    </div>
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/1382336-200.png" class="img-fluid" alt="picture">
+                        <h2>Cyber Security</h2>
+                        <p1>I design and code all my software with security in mind. Applications made by me will be defended from all manner of cyber threats like SQL Injection or Cross-Site Scripting.</p1>
+                    </div>
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/1854505-200.png" class="img-fluid" alt="picture">
+                        <h2>Project management</h2>
+                        <p1>I have taken the project leader roll countless times and ensure all projects meet deadlines. Working with me means effective and timely communication as well as a solution-based mindset.</p1>
+                    </div>
+                    <div class="col-md-4 column">
+                        <img src="https://static.thenounproject.com/png/2199735-200.png" class="img-fluid" alt="picture">
+                        <h2>SQA</h2>
+                        <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="projectsPage">
 
