Changes: - Made project boxes into links

--- a/index.html
+++ b/index.html
@@ -100,49 +100,49 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 projectColumn"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4 projectColumn" style="background-image: url(https://media.wired.com/photos/598e35fb99d76447c4eb1f28/master/pass/phonepicutres-TA.jpg);"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn" style="background-image: url(https://media.wired.com/photos/598e35fb99d76447c4eb1f28/master/pass/phonepicutres-TA.jpg);"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn" style="background-image: url(https://media.wired.com/photos/598e35fb99d76447c4eb1f28/master/pass/phonepicutres-TA.jpg);"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                     <div class="col-md-4 projectColumn" style="background-image: url(https://media.wired.com/photos/598e35fb99d76447c4eb1f28/master/pass/phonepicutres-TA.jpg);"> 
-                        <div class="projectText">
+                        <a class="projectText" href="https://www.linkedin.com/in/robert-dams/">
                             <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
-                        </div>                    
+                        </a>                    
                     </div>
                 </div>
             </div>
