Changes: - Removed scrollspy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/> <!--Font Awesome-->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/> <!--Google Fonts-->
     </head>
-    <body data-bs-spy="scroll" data-bs-target=".navbar">
+    <body>
         <div class="landingsPage" id="home">
             <div class="landingsPageText">
                 <h1>Hi, I'm <span style="color: rgb(241, 54, 55)">Robert Dams</span></h1>
