Changes: - Added suggestions from Google Lighthouse

--- a/projects/sound2show.html
+++ b/projects/sound2show.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" title="Sound2Show project at ALTEN">
+  <title>Sound2Show project at ALTEN</title>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -138,14 +139,14 @@
             class="btn btn-outline-light btn-floating m-1"
             href="https://www.linkedin.com/in/robert-dams/"
             role="button"
-            ><i class="fab fa-linkedin-in"></i>
+            >Linkedin<i class="fab fa-linkedin-in"></i>
           </a>
           <!-- Github -->
           <a
             class="btn btn-outline-light btn-floating m-1"
             href="https://github.com/Robert8034"
             role="button"
-            ><i class="fab fa-github"></i>
+            >Github<i class="fab fa-github"></i>
           </a>
         </section>
         <section class="mb-4">
