--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" title="Robert Dams">
+    <title>Robert Dams</title>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -51,8 +53,8 @@
             <hr style="width: 30%; height: 5px; background-color:rgb(241, 54, 55); margin-left: 35%;"></hr>  
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 column-left d-flex flex-wrap align-items-center">
-                        <img src="https://www.planetware.com/wpimages/2020/02/france-in-pictures-beautiful-places-to-photograph-eiffel-tower.jpg" class="img-fluid" alt="picture">
+                    <div class="col-md-6 column-left d-flex flex-wrap align-items-center profilePicture">
+                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQE0_hbn_tVSaQ/profile-displayphoto-shrink_400_400/0/1640448327614?e=1668643200&v=beta&t=TByn8ZMi9o32VujebewihFqEkUrf0Jx1EU2mS1PPZsY" class="img-fluid" alt="picture">
                     </div>
                     <div class="col-md-6 column-right">
                         <h2>Who am I?</h2>
