--- a/projects/rat.html
+++ b/projects/rat.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" title="Reporting Automation Tool (RAT) at ASML">
+  <title>Reporting Automation Tool (RAT) at ASML</title>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
