Changes: - Updated introduction text

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                     </div>
                     <div class="col-md-6 column-right">
                         <h2>Who am I?</h2>
-                        <p1>My name is Robert Dams, and I am currently a Software Engineering student at Fontys Hogescholen. I am a curious, communicative and motivated person in the software development field.</p1><br><br>
-                        <p1>As a person I am open-minded and I like to learn. This results in me exploring lots of different aspects of Software Engineering instead of sticking to one subject. I try out new programming languages and techniques in my free time to expand my view on Software Engineering.</p1><br><br>
-                        <p1>I am a people's person and greatly enjoy working with or for others. As a bit of a social butterfly you will find me mostly taking on leadership roles in a group and handling communication to stakeholders.</p1>
+                        <p1>Hi, my name is Robert Dams and I am a Software Engineer with a passion for both technology and people. As a student I always liked exploring new things and learning whenever I could, be it programming languages (C#, Java, C++) or development methods (Test Driven Development, Scrum). Studying and eventually graduating at Fontys Hogescholen gave me the opportunity to do so. Over the years this has resulted in a can-do attitude and a passion to learn new things. I like a challenge and approach problems with a positive mindset. Coming from an environment full of engineers and inventors, I take great satisfaction and pride when I bring a vision or idea to life through software!</p1>
                     </div>
                 </div>
             </div>
