Changes: - Added new profile picture - Rewritten all text on the website to reflect current career

--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 column-left d-flex flex-wrap align-items-center profilePicture">
-                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQE0_hbn_tVSaQ/profile-displayphoto-shrink_400_400/0/1640448327614?e=1668643200&v=beta&t=TByn8ZMi9o32VujebewihFqEkUrf0Jx1EU2mS1PPZsY" class="img-fluid" alt="picture">
+                        <img src="ProfilePicture.jpg" class="img-fluid" alt="picture">
                     </div>
                     <div class="col-md-6 column-right">
                         <h2>Who am I?</h2>
-                        <p1>Hi, my name is Robert Dams and I am a Software Engineer with a passion for both technology and people. As a student I always liked exploring new things and learning whenever I could, be it programming languages (C#, Java, C++) or development methods (Test Driven Development, Scrum). Studying and eventually graduating at Fontys Hogescholen gave me the opportunity to do so. Over the years this has resulted in a can-do attitude and a passion to learn new things. I like a challenge and approach problems with a positive mindset. Coming from an environment full of engineers and inventors, I take great satisfaction and pride when I bring a vision or idea to life through software!</p1>
+                        <p1>Greetings, I'm Robert Dams, a Software Engineer driven by a deep appreciation for technology and the dynamic interplay of human interaction with it. Throughout my academic journey, I thrived on exploration and continuous learning. Whether it was mastering programming languages such as C#, Java, and C++, or embracing development methodologies like Test Driven Development and Scrum, my educational path at Fontys Hogescholen provided the perfect backdrop for this intellectual adventure.<br><br>
+                            This relentless pursuit of knowledge has bestowed upon me a resolute can-do attitude and a fervor for embracing fresh challenges. I bring to the table a mindset rooted in positivity and an unwavering determination to surmount obstacles. Growing up in an environment teeming with engineers and inventors, I've come to relish the sense of fulfillment and pride that accompanies transforming a vision or concept into tangible reality through the art of software development.<br><br>
+                            Throughout my career, I've confronted a wide array of challenges. In my formative years as a consultant, I honed my ability to swiftly adapt to varying company cultures. This entailed not only adapting but also mastering the art of effective communication with clients, ensuring precise roadmaps and keeping them well-informed about my progress. In this consultant role, I often navigated these challenges independently, necessitating proficient leadership and guidance of fellow software developers during transitional phases within each organization.</p1>
                     </div>
                 </div>
             </div>
@@ -71,32 +73,32 @@
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/568069-200.png" class="img-fluid" alt="Software Development">
                         <h2>Software Development</h2>
-                        <p1>Software Development is my bread and butter. I am proficient in both high level programming languages like C# and Java, as well as lower level ones like C++. All code adhers to the latest SOLID principles.</p1>
+                        <p1>Software development is not just my profession; it's my passion and expertise. I excel in high-level programming languages such as C# and Java, while also delving into the intricacies of lower-level languages like C++. In every line of code I craft, I strictly adhere to the latest SOLID principles, ensuring robust and maintainable software solutions.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/2963864-200.png" class="img-fluid" alt="Development Operations">
                         <h2>Development Operations</h2>
-                        <p1>DevOps is second nature to me. I have experience in both Azure and Google Cloud as well as code analysis tools like Jenkins and SonarQube.</p1>
+                        <p1>DevOps is ingrained in my work approach. I possess extensive experience in Azure and Google Cloud, complemented by proficiency in code analysis tools like Jenkins and SonarQube.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/3190682-200.png" class="img-fluid" alt="Webdesign">
                         <h2>Webdesign</h2>
-                        <p1>A good back-end deserves a beautiful front-end. I have experience in React and Blazor. I also know how to make effective use of Bootstrap in both React and native HTML/CSS.</p1>
+                        <p1>A robust back-end should always be complemented by an elegant front-end. My expertise extends to React and Blazor, and I excel in harnessing the power of Bootstrap, whether in React or native HTML/CSS, to craft visually appealing and highly functional user interfaces.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/1382336-200.png" class="img-fluid" alt="Cyber Security">
                         <h2>Cyber Security</h2>
-                        <p1>I design and code all my software with security in mind. Applications made by me will be defended from all manner of cyber threats like SQL Injection or Cross-Site Scripting.</p1>
+                        <p1>Security is at the core of my software design and development philosophy. Every application I create is fortified against a wide spectrum of cyber threats, including but not limited to SQL Injection and Cross-Site Scripting, ensuring the safety and integrity of the systems I build.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/1854505-200.png" class="img-fluid" alt="Project Management">
                         <h2>Project management</h2>
-                        <p1>I have taken the project leader roll countless times and ensure all projects meet deadlines. Working with me means effective and timely communication as well as a solution-based mindset.</p1>
+                        <p1>I've assumed the role of project leader on numerous occasions, consistently delivering projects on time. Collaborating with me guarantees efficient and timely communication, along with a proactive, solution-oriented approach to challenges.</p1>
                     </div>
                     <div class="col-md-4 column">
                         <img src="https://static.thenounproject.com/png/2199735-200.png" class="img-fluid" alt="Software Quality Assurance">
                         <h2>SQA</h2>
-                        <p1>All code released has undergone multiple levels of testing through either DevOps pipelines or manual testing during development. I am also highly experienced in Test Driven Development.</p1>
+                        <p1>Each code release undergoes meticulous testing, encompassing multiple layers of evaluation, whether through DevOps pipelines or rigorous manual testing during development. Moreover, my extensive experience in Test Driven Development reinforces the quality and reliability of the codebase.</p1>
                     </div>
                 </div>
             </div>
@@ -185,7 +187,7 @@
         
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2022 Copyright:
+            © 2023 Copyright:
             <a class="text-white" href="https://www.linkedin.com/in/robert-dams/">Robert Dams</a>
             </div>
         </footer>
